fix chip styling so longer numbers are visible

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -10,8 +10,25 @@
 }
 
 .chip {
-    margin-left: 10px !important;
-    margin-bottom: 5px !important;
+    margin-left: 10px;
+    margin-bottom: 5px;
+    background-color: rgb(224 224 224);
+    border-radius: 50px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.chip-name {
+    padding: 5px;
+    padding-right: 8px;
+}
+
+.chip-count {
+    background-color: rgb(188 188 188);
+    color: white;
+    padding: 5px;
+    border-radius: 50px;
 }
 
 .steps {
